--- a/local/templates/crod/css/less/content.less
+++ b/local/templates/crod/css/less/content.less
@@ -1,6 +1,57 @@
 /* ----------------------------------- *\
 			content styles
 \* ----------------------------------- */
+.doc-list-box {
+    margin-bottom: 20px;
+    &:last-child {
+        margin-bottom: 50px;
+    }
+    .item-wrap {
+        margin-bottom: 10px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+.actions-buttons-box {
+    margin-bottom: 50px;
+    .frm-field {
+        margin-bottom: 10px;
+        padding: 0 5px;
+        width: 100%;
+    }
+    .frm-row {
+        margin: 0 -5px;
+    }
+    .btn {
+        width: 100%;
+        &.button-second {
+            &:not(:hover) {
+                color: fade(#171D26, 50);
+                .button-ico {
+                    opacity: 0.5;
+                }
+            }
+        }
+    }
+}
+.filter-box {
+    margin-bottom: 10px;
+    .frm-row {
+        margin: 0 -5px;
+    }
+    .frm-field {
+        padding: 0 5px;
+        margin-bottom: 10px;
+        width: 100%;
+    }
+    .h2-title {
+        margin-bottom: 20px;
+        font-size: 20px;
+        line-height: 27/20;
+        .fm;
+    }
+}
 .tabs-buttons-box {
     margin-bottom: 20px;
     .menu {
@@ -551,6 +602,67 @@ body.popup-open {
 }
 .table-box {
     margin-bottom: 50px;
+    &.table-center {
+        table.tbl-main {
+            th, td {
+                text-align: center;
+            }
+            .btn-action-ico {
+                display: inline-block;
+            }
+        }
+    }
+    &.table-full {
+        width: 100vw;
+        position: relative;
+        left: 50%;
+        margin-left: -50vw;
+        .table-inner-wrap {
+            margin-left: 0;
+            margin-right: 0;
+            table {
+                margin: 0 auto;
+                width: 2740px;
+            }
+        }
+        .table-scroll-wrap {
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 20px;
+            overflow: auto;
+            &::-webkit-scrollbar {
+                height: 6px;
+                width: 6px;
+                background-color: #D9D9D9;
+            }
+            &::-webkit-scrollbar-thumb {
+                background-color: #747474;
+            }
+            &::-webkit-scrollbar-thumb:hover {
+                background-color: #747474;
+            }
+            &::-webkit-scrollbar-button:vertical:start:decrement {
+                background-color: transparent;
+                width: 0;
+                height: 0;
+            }
+            &::-webkit-scrollbar-button:vertical:end:increment {
+                background-color: transparent;
+                width: 0;
+                height: 0;
+            }
+            &::-webkit-scrollbar-button:horizontal:start:decrement {
+                background-color: transparent;
+                width: 0;
+                height: 0;
+            }
+            &::-webkit-scrollbar-button:horizontal:end:increment {
+                background-color: transparent;
+                width: 0;
+                height: 0;
+            }
+        }
+    }
     .table-inner-wrap {
         table {
             margin-bottom: 0;
@@ -671,20 +783,30 @@ body.popup-open {
     }
     .menu {
         margin: 0;
-        li {
+        &>li {
             margin: 0;
             padding: 0;
             border-bottom: 1px solid #D6D6D6;
             &:last-child {
                 border-bottom: none;
             }
+            &:before {
+                display: none;
+            }
+            &>a {
+                display: block;
+                padding: 19px 0;
+                transition: all ease 0.2s;
+                &:not(:hover) {
+                    color: inherit;
+                }
+            }
         }
-        a {
-            display: block;
-            padding: 19px 0;
-            transition: all ease 0.2s;
-            &:not(:hover) {
-                color: inherit;
+        .popup-content-block {
+            padding: 0 0 20px 0;
+            display: none;
+            .items-wrap {
+                margin: 0 -10px;
             }
         }
     }
@@ -789,6 +911,8 @@ body.popup-open {
     display: flex;
     .h1-title {
         margin-bottom: 10px;
+        word-wrap: break-word;
+        word-break: keep-all;
     }
     .title-wrap {
         flex: 1;
@@ -954,6 +1078,7 @@ body.popup-open {
     }
     .h1-title {
         margin: 0 0 12px 0;
+        font-weight: 500;
     }
     .h3-title {
         margin: 0;
@@ -1549,6 +1674,16 @@ body.popup-open {
     }
 }
 @media (min-width: 768px) {
+    .actions-buttons-box {
+        .field-half {
+            width: 50%;
+        }
+    }
+    .filter-box {
+        .frm-field {
+            width: 50%;
+        }
+    }
     .gallery-slider-box {
         margin: 50px 0;
         .slider-wrap {
@@ -1796,6 +1931,32 @@ body.popup-open {
     }
 }
 @media (min-width: 1024px) {
+    .filter-box {
+        .row-3 {
+            .frm-field {
+                width: 33.33%;
+            }
+        }
+    }
+    .doc-list-box {
+        margin-bottom: 40px;
+        &:last-child {
+            margin-bottom: 50px;
+        }
+        .item-wrap {
+            margin-bottom: 20px;
+        }
+    }
+    .actions-buttons-box {
+        width: 552px;
+        margin-left: auto;
+    }
+    .filter-box {
+        margin-bottom: 10px;
+        .h2-title {
+            margin-bottom: 20px;
+        }
+    }
     .tabs-buttons-box {
         margin-bottom: 22px;
         .menu {
@@ -2115,16 +2276,23 @@ body.popup-open {
     .link-box {
         margin-bottom: 20px;
         .box-inner-wrap {
-            border-radius: 4rem;
+            border-radius: 3rem;
             padding: 40px 300px 40px 0;
             display: flex;
             align-items: center;
             justify-content: flex-end;
+            &:before {
+                opacity: 1;
+                background-size: 370px auto;
+                background-position: 0 -105px;
+                left: 60px;
+            }
+            
         }
         .title-inner-wrap {
             width: 45%;
             flex-shrink: 0;
-            padding: 0 20px 0 0;
+            padding: 0 20px 0 30px;
             margin: 0;
         }
         .action-inner-wrap {
@@ -2311,6 +2479,13 @@ body.popup-open {
             width: 180px;
         }
     }
+    .link-box {
+        .box-inner-wrap {
+            &:before {
+                left: 30px;
+            }
+        }
+    }
     .links-box {
         overflow: visible;
         .box-inner-wrap {
@@ -2322,8 +2497,13 @@ body.popup-open {
     }
 }
 @media (min-width: 1200px) {
-    .form-box {
-        
+    .link-box {
+        .h1-title {
+            font-size: 36px;
+        }
+        .h3-title {
+            font-size: 18px;
+        }
     }
     .news-box {
         &.section-inner {
