--- a/local/templates/crod/css/less/items.less
+++ b/local/templates/crod/css/less/items.less
@@ -1,6 +1,65 @@
 /* ----------------------------------- *\
 			items styles
 \* ----------------------------------- */
+.item-tile-doc-list {
+    display: block;
+    position: relative;
+    background-color: #fff;
+    border: 1px solid #D6D6D6;
+    border-radius: 10px;
+    padding: 15px 12px 5px 22px;
+    color: var(--clr-title);
+    .tile-title-wrap {
+        margin-bottom: 20px;
+    }
+    .tile-actions-wrap {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 -5px 0 0;
+    }
+    .tile-action {
+        padding: 0 5px 0 0;
+        margin-bottom: 5px;
+    }
+    .tile-title {
+        display: block;
+        font-size: 16px;
+        line-height: 22/16;
+        font-weight: 500;
+        .form-input {
+            padding: 0;
+            display: block;
+            border-radius: 0;
+            border: none;
+            height: 22px;
+            box-shadow: none;
+            background-color: transparent;
+        }
+        [placeholder]::-webkit-input-placeholder {color: var(--clr-title);}
+        [placeholder]:-moz-placeholder {color: var(--clr-title);}
+        [placeholder]::-moz-placeholder {color: var(--clr-title);}
+        [placeholder]:-ms-input-placeholder {color: var(--clr-title);}
+    }
+    .btn {
+        padding: 0 10px 0 5px;
+        height: 39px;
+        border-radius: 10px;
+        font-size: 14px;
+        line-height: 19px;
+        font-weight: 500;
+        &.button-second {
+            &:not(:hover) {
+                color: fade(#171D26, 50);
+                .button-ico {
+                    opacity: 0.5;
+                }
+            }
+        }
+        .button-ico {
+            margin: 0 5px 0 0;
+        }
+    }
+}
 .item-tile-cnt {
     display: block;
     position: relative;
@@ -58,12 +117,19 @@
         display: block;
         flex: 1;
         padding: 0 0 0 20px;
-        max-width: calc(100% - 36px);
+        max-width: 15em;
         .ft;
     }
-    &.tile-disabled {
-        opacity: 0.5;
-        pointer-events: none;
+    &.tile-light {
+        &:not(:hover) {
+            opacity: 0.5;
+        }
+        &:hover {
+            color: #000;
+            .tile-ico {
+                filter: brightness(0) grayscale(1);
+            }
+        }
     }
     &:hover {
         color: var(--clr-att);
@@ -107,7 +173,7 @@
         }
     }
     .tile-info-title {
-        font-weight: 500;
+        font-weight: bold;
     }
     .tile-title {
         margin: 0;
@@ -339,7 +405,7 @@
         padding-top: 12px;
         &.info-clear {
             margin-top: 0;
-            padding-top: 5px;
+            padding-top: 15px;
             border-top: none;
             padding-left: 68px;
         }
@@ -506,13 +572,40 @@
         font-size: 16px;
         line-height: 22/16;
         padding: 20px;
-        .cnt-link {o
+        .cnt-link {
             font-size: 20px;
             line-height: 27/20;
         }
     }
 }
 @media (min-width: 1024px) {
+    .item-tile-doc-list {
+        padding: 10px;
+        border-radius: 20px;
+        display: flex;
+        .tile-title-wrap {
+            margin: 0;
+            flex: 1;
+            padding: 0 10px 0 10px;
+            min-height: 39px;
+            display: flex;
+            align-items: center;
+        }
+        .tile-title {
+            margin: 0;
+            flex-shrink: 0;
+            width: 100%;
+        }
+        .tile-actions-wrap {
+            flex-wrap: nowrap;
+            margin: 0;
+            flex-shrink: 0;
+        }
+        .tile-action {
+            padding: 0 0 0 5px;
+            margin: 0;
+        }
+    }
     .item-tile-folder {
         font-size: 2rem;
         line-height: 23/20;
@@ -522,7 +615,7 @@
         }
         .tile-title {
             padding-left: 28px;
-            max-width: calc(100% - 4.8rem);
+            //max-width: calc(100% - 4.8rem);
         }
     }
     .item-tile-object {
