--- a/local/templates/crod/css/less/main.less
+++ b/local/templates/crod/css/less/main.less
@@ -147,12 +147,136 @@ h3, .h3-title {
 }
 table {
     margin-bottom: 50px;
+    &.tbl-fix {
+        table-layout: fixed;
+        width: auto !important;
+        max-width: inherit;
+        .col01 {
+            width: 157px;
+            min-width: 157px;
+        }
+        .col02 {
+            width: 74px;
+            min-width: 74px;
+        }
+        .col03 {
+            width: 301px;
+            min-width: 301px;
+        }
+        .col04 {
+            width: 200px;
+            min-width: 200px;
+        }
+        .col05 {
+            width: 92px;
+            min-width: 92px;
+        }
+        .col06 {
+            width: 173px;
+            min-width: 173px;
+        }
+        .col07 {
+            width: 260px;
+            min-width: 260px;
+        }
+        .col08 {
+            width: 200px;
+            min-width: 200px;
+        }
+        .col09 {
+            width: 200px;
+            min-width: 200px;
+        }
+        .col10 {
+            width: 200px;
+            min-width: 200px;
+        }
+        .col11 {
+            width: 200px;
+            min-width: 200px;
+        }
+        .col12 {
+            width: 200px;
+            min-width: 200px;
+        }
+        .col13 {
+            width: 200px;
+            min-width: 200px;
+        }
+        .col14 {
+            width: 200px;
+            min-width: 200px;
+        }
+        .col15 {
+            width: 100px;
+            min-width: 100px;
+        }
+    }
     &.tbl-main {
         font-size: 16px;
         line-height: 22/16;
         font-weight: 500;
         border-collapse: separate;
         border-spacing: 0 5px;
+        .form-input {
+            display: inline-block;
+            vertical-align: middle;
+            height: 22px;
+            padding: 0;
+            border-radius: 0;
+            background-color: transparent;
+            border: none;
+            text-align: center;
+        }
+        &.tbl-main-inner {
+            border-spacing: 0;
+            border-collapse: collapse;
+            thead {
+                .tr-color {
+                    th, td {
+                        background-color: #EEE8FF;
+                        border-color: #EEE8FF;
+                        &.color-second {
+                            background-color: #F6EEF3;
+                            border-color: #F6EEF3;
+                        }
+                        &.color-third {
+                            background-color: #E1FCE5;
+                            border-color: #E1FCE5;
+                        }
+                        &.color-four {
+                            background-color: #DBF5FB;
+                            border-color: #DBF5FB;
+                        }
+                    }
+                }
+                th, td {
+                    height: 52px;
+                    padding: 15px;
+                    &:first-child {
+                        padding: 15px;
+                    }
+                    &:last-child {
+                        padding: 15px;
+                    }
+                }
+            }
+            th, td {
+                height: 82px;
+                align-items: center;
+                padding: 15px;
+                border: 1px solid #d6d6d6;
+                background: none;
+                &:first-child {
+                    padding: 15px;
+                    border-radius: 0;
+                }
+                &:last-child {
+                    padding: 15px;
+                    border-radius: 0;
+                }
+            }
+        }
         thead {
             th, td {
                 border-radius: 0;
